wrap main article to fix close button

--- a/main.css
+++ b/main.css
@@ -136,7 +136,7 @@ nav #navLink {
 #mainWindow {
     transition: width 0.6s, height 0.6s;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19);
-    padding:20px;
+
     width:80vw;
     height:calc(100% - 200px);
     max-width:1024px;
@@ -144,7 +144,6 @@ nav #navLink {
     background: white;
     border-radius: 4px;
     position: relative;
-    overflow-y: scroll;
 }
 
 main {
@@ -193,7 +192,16 @@ div#closeMain:hover {
 main article {
     width:100%;
     height:100%;
+    padding-left:20px;
 }
+
+#mainArticleWrapper {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    width:100%;
+    height:100%;
+}
+
 
 /* loading indicator */
 #loading {
@@ -206,6 +214,8 @@ main article {
     top: calc(50% - (10vh / 2));
     width:10vw;
     height:10vh;
+    text-align: center;
+    line-height:1em;
 }
 #loading.show {
     opacity:1;
